# FastSql2Json

./: .gitignore  Cargo.toml  README.md  config.toml.example
sql_files/: test.sql
sql_files/subdir/: cte_test.sql
src/: config.rs  db.rs  file_handler.rs  json_generator.rs  logger.rs  main.rs  scanner.rs  sql_executor.rs  tests.rs
