[package]
name = "FastSQL2Json"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mysql = { version = "24.0", default-features = false }
log = "0.4"
env_logger = "0.10"
tokio = { version = "1.35", features = ["full"] }
walkdir = "2.4"
chrono = { version = "0.4", features = ["serde"] }
tempfile = "3.10"
fs2 = "0.4"
base64 = "0.21"
clap = { version = "4.4", features = ["derive"] }

# 解决依赖编译问题
flate2 = { version = "1.1", features = ["rust_backend"] }
openssl-sys = { version = "0.9", features = ["vendored"] }
